--- a/part3/phone-backend/package.json
+++ b/part3/phone-backend/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "server": "json-server -p3001 --watch db.json",
+    "build:ui": "rm -rf build && cd ../../part2/phonebook && npm run build && cp -r build ../part3/phone-backend",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "logs:prod": "heroku logs --tail",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
